objects/OpportunitySplit.object
<CustomObject>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <description>Holds the user&apos;s department</description>
        <formula>SplitOwner.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Internal Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Holds the role of user</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FCP</fullName>
                </value>
                <value>
                    <fullName>FOPM</fullName>
                </value>
                <value>
                    <fullName>FOQ</fullName>
                </value>
                <value>
                    <fullName>PME</fullName>
                </value>
                <value>
                    <fullName>PMO</fullName>
                </value>
                <value>
                    <fullName>PMT</fullName>
                </value>
                <value>
                    <fullName>QM</fullName>
                </value>
                <value>
                    <fullName>RM</fullName>
                </value>
                <value>
                    <fullName>SCM</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>SP</fullName>
                </value>
                <value>
                    <fullName>TMP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TECH_IsCloned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To by validation rules for cloned sales contributor records</description>
        <label>TECH_IsCloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TECH_SalesContributorId__c</fullName>
        <label>TECH_SalesContributorId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserBusiness__c</fullName>
        <description>Holds the user&apos;s business unit</description>
        <formula>Case(SplitOwner.UserBusinessUnit__c,
&quot;BD&quot;, &quot;Digital Energy&quot;,
&quot;CMO&quot;, &quot;Global Marketing&quot;,
&quot;COP&quot;, &quot;China Operations&quot;,
&quot;EN&quot;, &quot;Power Systems&quot;,
&quot;FIN&quot;, &quot;Finance &amp; Control&quot;,
&quot;FLS&quot;, &quot;Field Services&quot;,
&quot;GC&quot;, &quot;Cloud Services&quot;,
&quot;GHR&quot;, &quot;Global Human Resource&quot;,
&quot;GMA&quot;, &quot;Corporate General Management&quot;,
&quot;GOP&quot;, &quot;Global Operations&quot;,
&quot;GSC&quot;, &quot;Global Supply Chain&quot;,
&quot;GW&quot;, &quot;Software&quot;,
&quot;IA&quot;, &quot;Process Automation&quot;,
&quot;IB&quot;, &quot;Other Industry&quot;,
&quot;ID&quot;, &quot;Industrial Automation&quot;,
&quot;IPO&quot;, &quot;Information, Process and Organization&quot;,
&quot;IT&quot;, &quot;Secure Power&quot;,
&quot;NOP&quot;, &quot;North America Operations&quot;,
&quot;PP&quot;, &quot;Power Products&quot;,
&quot;PR&quot;, &quot;Home and Distribution&quot;,
&quot;PS&quot;, &quot;Energy and Sustainability services&quot;,
&quot;SAI&quot;, &quot;Strategy &amp; Technology&quot;,
&quot;SCS&quot;, &quot;Strategic Customers and Segments&quot;,
&quot;SO&quot;, &quot;Solar&quot;,
&quot;BI&quot;, &quot;Energy Management&quot;,
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User Business</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>